sort.pancake.GatesPancake.scala.error
Compilation error:
GatesPancake:7: error: not found: value estTrie
  while(!estTrie()){
         ^